JCR-1150: use "Integer.valueOf" instead of "new Integer", uses entry sets instead of key sets when value is needed as well
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@580332 13f79535-47bb-0310-9956-ffa450edef68