@@ -613,7 +613,7 @@ public class WorkspaceManager implements UpdatableItemStateManager, NamespaceSto
                                  InternalEventListener[] lstnrs)
             throws InterruptedException {
         if (log.isDebugEnabled()) {
-            log.debug("received {} event bundles.", new Integer(eventBundles.length));
+            log.debug("received {} event bundles.", Integer.valueOf(eventBundles.length));
             for (int i = 0; i < eventBundles.length; i++) {
                 log.debug("BundleId: {}", eventBundles[i].getBundleId());
                 log.debug("IsLocal:  {}", Boolean.valueOf(eventBundles[i].isLocal()));
